<?xml version="1.0"?>
<package format="2">
  <name>transbot_simulation</name>
  <version>0.0.0</version>
  <description>The transbot_simulation package</description>
  <maintainer email="mitukou1109@g.ecc.u-tokyo.ac.jp">Mitsuhiro Sakamoto</maintainer>
  <license>TODO</license>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>transbot_description</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>